test/spec_vectors/table_get/fail/module_1.wat
(module (table $t 10 externref) (func $type-index-empty-vs-i32 (result externref) (table.get $t)))